--- a/ArcReactor/Views/MainPage.xaml
+++ b/ArcReactor/Views/MainPage.xaml
@@ -65,7 +65,7 @@
                     <Button Content="Pulse" HorizontalAlignment="Stretch" Click="{x:Bind ViewModel.SendPulse}" />
                     <Button Content="Startup" HorizontalAlignment="Stretch" Click="{x:Bind ViewModel.SendStartup}" />
                     <Button Content="Turn Off" HorizontalAlignment="Stretch" Click="{x:Bind ViewModel.SendBlack}" />
-                    <Button Content="Get Battery Level" HorizontalAlignment="Stretch" Click="{x:Bind ViewModel.GetBatteryLevel}" />
+                    <Button Content="Update Battery Level" HorizontalAlignment="Stretch" Click="{x:Bind ViewModel.GetBatteryLevel}" />
                     <TextBlock Text="{Binding BatteryLevel}" />
                 </StackPanel>
             </PivotItem>
