--- a/ArcReactor/Views/MainPage.xaml
+++ b/ArcReactor/Views/MainPage.xaml
@@ -66,7 +66,9 @@
                     <Button Content="Startup" HorizontalAlignment="Stretch" Click="{x:Bind ViewModel.SendStartup}" />
                     <Button Content="Turn Off" HorizontalAlignment="Stretch" Click="{x:Bind ViewModel.SendBlack}" />
                     <Button Content="Update Battery Level" HorizontalAlignment="Stretch" Click="{x:Bind ViewModel.GetBatteryLevel}" />
-                    <TextBlock Text="{Binding BatteryLevel}" />
+                    <TextBlock Text="Battery Voltage" Margin="0,30,0,0" />
+                    <TextBlock Text="{Binding BatteryLevel}" Style="{StaticResource TitleTextBlockStyle}" TextAlignment="Center" />
+                    <ProgressBar Value="{Binding BatteryLevel}" Maximum="5.0" />
                 </StackPanel>
             </PivotItem>
 
